--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,8 +1,168 @@
-/*
-Colors:
+html {
+    box-sizing: border-box;
+}
+  
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+  
+body {  
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    color: #000;  
+    font-size: 16px;
+    font-family:  sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    display: grid;
+    grid-template-rows: 75px 450px 300px 500px;
+    grid-template-columns: auto;
+}
 
-Text: 1A1A1A
-Green: #00B172
-White: #FFF
+.nav-bar {
+    display: grid;
+    height: 75px;
+    background-color: #fff;
+    grid-template-rows: 14px auto 14px;
+    grid-template-columns: 225px auto 375px;
+}
 
-*/
+.nav-bar img {
+    display: grid;
+    width: 160px;
+    grid-area: 2 / 1 / 3 / 3;
+    margin-left: 30px;
+}
+
+ul {
+    display: flex;
+    list-style-type: none;
+    text-align: center;
+    grid-area: 2 / 3 / 3 / 4;
+    align-self: center;
+    justify-self: flex-end;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+    margin-right: 20px;
+}
+
+.last-item {
+    margin-right: 40px;
+}
+
+.banner {
+    display: grid;
+    background-image: url("../images/landing.jpg");
+    background-size: cover;
+    color: #fff;
+    text-align: center;
+    grid-template-rows: 25% 30% 20% 25%;
+    grid-template-columns: 20% 60% 20%;
+}
+
+.banner h1  {
+    grid-area:  2 / 2 / 3 / 3;
+    align-self: flex-start;
+    font-size: 2.25em;
+}
+
+.banner p {
+    grid-area:  2 / 2 / 3 / 3;
+    align-self: flex-end;
+    font-size: 0.8em;
+}
+
+.information {
+    display: grid;
+    grid-template-rows: 100px 225px 45px;
+    grid-template-columns: 30% 25% 30%;
+    grid-column-gap: 5%;
+}
+
+.information h2 {
+    grid-area:  1 / 1 / 2 / col3-end;
+    text-align: center;
+    align-self: center;
+    text-decoration: underline  rgb(0, 177, 103);
+}
+
+.articles img {
+    width: 30%;
+    justify-self: center;
+}
+
+.articles {
+    display: grid;
+    text-align: center;
+    align-content: center;
+    align-self: center;
+}
+
+.articles h3 {
+    color:  rgb(0, 177, 103);
+    font-weight: bold;
+    margin: 20px 0;
+}
+
+.articles p {
+    font-weight: 100;
+    margin: 0;
+}
+
+.article-one {
+    grid-area:  2 / 1 / 3 / 2;
+    margin-left: 20%;
+}
+
+.article-two {
+    grid-area:  2 / 2 / 3 / 3;
+}
+
+.article-three {
+    grid-area:  2 / 3 / 3 / col3-end;
+    margin-right: 20%;
+    justify-self: stretch;
+}
+
+.example {
+    display: grid;
+    background-color: rgb(0, 177, 103);
+    margin: 3%;
+    padding: 0 5%;
+    color: #fff;
+    grid-template-rows: 50px 100px 350px 50px;
+    grid-template-columns: 33% 33% 33%;
+}
+
+.text-example {
+    grid-area:  3 / 1 / 4 / 2;
+    font-size: 0.8em;
+    width: 100%;
+}
+
+.white-logo {
+    grid-area:  3 / 2 / 4 / 3;
+    width: 85px;
+    padding-top: 75px;
+    justify-self: center;
+}
+
+.example h2 {
+    grid-area:  2 / 1 / 3 / 2;
+    align-self: center;
+    text-decoration: underline;
+}
+
+.app {
+    grid-area:  2 / 3 / 4 / 4;
+    width: 100%;
+    align-self: center;
+    justify-self: flex-end;
+    padding-top: 25px;
+}
